Fixed whitespace in Chrome

--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ th {
 	text-align:center;
 	text-indent:0;
 	padding:40px 0 0;
-	margin-bottom:.4em;
+	margin-bottom:26px;
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#000',EndColorStr='#1f1f1f');
 	-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorStr='#000', EndColorStr='#1f1f1f')";
 	filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#000000',endColorstr='#1F1F1F');
